--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test project example",
   "main": "google.spec.js",
   "scripts": {
-    "test": "mocha '**/*spec.js'"
+    "test": "mocha 'test/**/*spec.js'"
   },
   "keywords": [
     "mocha",
